--- a/apps/arclight/tsconfig.json
+++ b/apps/arclight/tsconfig.json
@@ -33,5 +33,5 @@
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts"]
 }
