--- a/apps/arclight/project.json
+++ b/apps/arclight/project.json
@@ -58,7 +58,7 @@
       "options": {
         "commands": [
           {
-            "command": "DOPPLER_TOKEN=$DOPPLER_WATCH_TOKEN doppler secrets download --no-file --format=env-no-quotes --project watch > apps/arclight/.env"
+            "command": "DOPPLER_TOKEN=$DOPPLER_ARCLIGHT_TOKEN doppler secrets download --no-file --format=env-no-quotes --project arclight > apps/arclight/.env"
           }
         ]
       }
