--- a/apps/arclight/project.json
+++ b/apps/arclight/project.json
@@ -5,17 +5,63 @@
   "projectType": "application",
   "targets": {
     "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "cp -r libs/locales apps/arclight/public",
+          "nx _build arclight"
+        ],
+        "parallel": false
+      },
+      "configurations": {
+        "production": {
+          "commands": [
+            "cp -r libs/locales apps/arclight/public",
+            "CI=true nx _build arclight --prod"
+          ]
+        }
+      }
+    },
+    "_build": {
       "executor": "@nx/next:build",
       "outputs": ["{options.outputPath}"],
-      "defaultConfiguration": "production",
       "options": {
         "outputPath": "dist/apps/arclight"
       },
       "configurations": {
-        "development": {
-          "outputPath": "apps/arclight"
-        },
         "production": {}
+      }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "VERCEL_PROJECT_ID=$ARCLIGHT_VERCEL_PROJECT_ID npx vercel pull --environment=preview --token=$VERCEL_TOKEN",
+          "npx vercel build",
+          "VERCEL_PROJECT_ID=$ARCLIGHT_VERCEL_PROJECT_ID npx vercel deploy --prebuilt --token=$VERCEL_TOKEN --archive=tgz > apps/arclight/.vercel-url",
+          "npx @datadog/datadog-ci sourcemaps upload dist/apps/arclight/.next/static --service=arclight --release-version=$NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA --minified-path-prefix=$(cat apps/arclight/.vercel-url)/_next/static/"
+        ],
+        "parallel": false
+      },
+      "configurations": {
+        "production": {
+          "commands": [
+            "VERCEL_PROJECT_ID=$ARCLIGHT_VERCEL_PROJECT_ID npx vercel pull --environment=production --token=$VERCEL_TOKEN",
+            "npx vercel build --prod",
+            "VERCEL_PROJECT_ID=$ARCLIGHT_VERCEL_PROJECT_ID npx vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN --archive=tgz > apps/arclight/.vercel-url",
+            "npx @datadog/datadog-ci sourcemaps upload dist/apps/arclight/.next/static --service=arclight --release-version=$NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA --minified-path-prefix=https://your.nextstep.is/_next/static/"
+          ]
+        }
+      }
+    },
+    "vercel-alias": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "npx vercel alias set $(cat apps/arclight/.vercel-url) arclight-$PR_NUMBER-jesusfilm.vercel.app --token=$VERCEL_TOKEN --scope=jesusfilm",
+          "echo \"https://arclight-$PR_NUMBER-jesusfilm.vercel.app\" > apps/arclight/.vercel-url"
+        ],
+        "parallel": false
       }
     },
     "serve": {
@@ -52,6 +98,12 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint"
+    },
+    "type-check": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx tsc -b apps/arclight/tsconfig.json"
+      }
     },
     "fetch-secrets": {
       "executor": "nx:run-commands",
