--- a/apps/arclight/tsconfig.json
+++ b/apps/arclight/tsconfig.json
@@ -18,7 +18,7 @@
       {
         "name": "@0no-co/graphqlsp",
         "schema": "../../apps/api-gateway/schema.graphql",
-        "tadaOutputLocation": "./src/graphql-env.d.ts"
+        "tadaOutputLocation": "./__generated__/graphql-env.d.ts"
       }
     ],
     "types": ["jest", "node"]
