--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "next-absolute-url": "^1.2.2",
     "next-firebase-auth": "^1.0.1",
     "next-i18next": "15.0.0",
+    "next-intl": "^3.12.0",
     "next-logger": "^4.0.0",
     "next-seo": "^6.4.0",
     "nodemailer": "^6.9.9",
