--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-colorful": "^5.5.1",
+    "react-day-picker": "^8.10.1",
     "react-div-100vh": "^0.7.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
