--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "@types/jest": "^29.5.4",
     "@types/leaflet": "^1.9.4",
     "@types/lodash": "^4.14.198",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.20",
     "@types/node": "20.12.2",
     "@types/react": "18.3.1",
     "@types/react-beautiful-dnd": "^13.1.7",
