--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@mui/lab": "5.0.0-alpha.150",
     "@mui/material": "^5.14.8",
     "@mui/system": "^5.14.8",
+    "@mui/x-charts": "^7.3.2",
     "@mui/x-data-grid": "^6.12.1",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/apollo": "^12.0.7",
