--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@react-email/render": "^0.0.13",
     "@storybook/core-server": "7.6.6",
     "@types/mailchimp__mailchimp_marketing": "^3.0.19",
+    "accept-language": "^3.0.18",
     "adal-node": "^0.2.3",
     "algoliasearch": "^4.22.0",
     "aws-sdk": "^2.1557.0",
@@ -95,7 +96,8 @@
     "fscreen": "^1.2.0",
     "gql.tada": "^1.5.3",
     "graphql": "^16.8.0",
-    "i18next": "23.6.0",
+    "i18next": "^23.6.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "instantsearch.js": "^4.63.0",
     "ioredis": "^5.3.2",
     "isomorphic-fetch": "^3.0.0",
@@ -110,7 +112,6 @@
     "next-absolute-url": "^1.2.2",
     "next-firebase-auth": "^1.0.1",
     "next-i18next": "15.0.0",
-    "next-intl": "^3.12.0",
     "next-logger": "^4.0.0",
     "next-seo": "^6.4.0",
     "nodemailer": "^6.9.9",
@@ -128,7 +129,7 @@
     "react-email": "^2.1.2",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
-    "react-i18next": "13.3.1",
+    "react-i18next": "^13.3.1",
     "react-instantsearch": "^7.5.0",
     "react-is": "18.3.1",
     "react-leaflet": "^4.2.1",
