--- a/apps/journeys-admin-e2e/project.json
+++ b/apps/journeys-admin-e2e/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/journeys-admin-e2e/src",
   "projectType": "application",
+  "implicitDependencies": ["journeys-admin"],
   "targets": {
     "e2e": {
       "executor": "nx:run-commands",
@@ -41,6 +42,5 @@
       }
     }
   },
-  "tags": [],
-  "implicitDependencies": ["journeys-admin"]
+  "tags": []
 }
