--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -18,7 +18,8 @@ RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg -
 
 # [Optional] Uncomment this section to install additional OS packages.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends gnupg2 libpixman-1-dev libcairo2-dev libpango1.0-dev postgresql-client-13 chromium
+    && apt-get -y install --no-install-recommends gnupg2 libpixman-1-dev libcairo2-dev libpango1.0-dev \
+    postgresql-client-13 chromium apt-transport-https ca-certificates curl gnupg
 
 # [Optional] Uncomment if you want to install an additional version of node using nvm
 # ARG EXTRA_NODE_VERSION=20
@@ -29,3 +30,5 @@ RUN su node -c "npm install -g npm@latest"
 
 RUN mkdir /home/node/.doppler \
     && chown -R node /home/node/.doppler
+
+RUN curl -fsSL https://bun.sh/install | bash
